0.7
----------------
- Add keepalive timer
- Add latcp control of keepalive timer & retransmit limit

0.6 27th May 2000
-----------------
- New version number. Now a beta release
- Lots of changes, far too many to relate here totally so these are highlights:
- latcp is now functional. It should be used to start/stop latd. see
  README.LATCP for the details
- reverse LAT now works
- Fixed Disconnect problem with Tru64. I hope this wil also fix a similar 
  problem with DECserver 500s
- now binds to the requested ethernet card so it doesn't hear messages it can't
  respond to.


0.0.5 15th April 2000
---------------------
- Started the NEWS file
- Now works with DECserver 200
- Much improved speed due to better slot packing
- Some (non-working) reverse-LAT code
- Tidied serversession.cc
- Added -c parameter to specify the circuit timer period
- Fixed lots of bugs in the service table code
- Now sends a "shutdown" announcement when latd exits
- libdnet is now optional. latd now has no dependancy on DECnet at all though
  it will use libdnet if it's present.
- Plenty of other stuff I've probably forgotten
- Disconnecting one session doesn't delete them all now