@@ -1,0 +1,48 @@
+.TH LATD.CONF 5 "June 2 2000" "LAT Server"
+
+.SH NAME
+latd.conf \- LAT configuration file
+.SH SYNOPSIS
+.B /etc/latd.conf
+
+.SH DESCRIPTION
+.PP
+/etc/latd.conf is a shell script (run by /bin/sh) that is run when
+latd is started up using the latcp -s command.
+.br
+It contains commands used to customise lat for your site and usually
+consists of a list of latcp commands.
+.br
+latd.conf is run with a minimal PATH, but the latcp command is
+guaranteed to be on it. It also has a minimal environment.
+
+.SS EXAMPLE
+.nf
+.ft CW
+.in +3n
+# /etc/latd.conf
+# This is a sample configuration file for latd
+# it is run as s shell script from latcp -s with a minimal
+# environment and PATH (though latcp will always be available on the path)
+#
+# You can fiddle with all the latd parameters you like in here, the first
+# service announcement will not be made until this script completes.
+#
+#
+
+# Set the multicast timeout to 30 seconds
+# latcp -m 30 
+
+# Add another login service
+# latcp -A -a LINUX -r 100
+
+# Add a reverse LAT service to a printer on a DECserver
+# latcp -A -p /dev/lat/printer -Hdecserver -Vdecserver
+
+exit
+
+
+
+
+.SS SEE ALSO
+.BR latcp "(8), " latd "(8)"
